[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/MainMenu_UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelSelection/Level_Selection_UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UpgradeShop/UpgradeShop_UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UpgradeShop/UpgradeShop_UI.gd" type="Script" id=5]

[node name="GameMenu" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="LevelSelector" parent="." instance=ExtResource( 2 )]
visible = false

[node name="UpgradeShop" parent="." instance=ExtResource( 4 )]
visible = false
script = ExtResource( 5 )
